/**
 * Copyright (C) 2014-2017 Lightbend Inc. <http://www.lightbend.com>
 */
package akka.typed.cluster.sharding;

option java_package = "akka.typed.cluster.sharding.internal.protobuf";
option optimize_for = SPEED;
import "ContainerFormats.proto";

message ShardingEnvelope {
  required string entityId = 1;
  optional Payload message = 2;
}
